refactor(runtime): require explicit backend providers